Made cmake 2.8 compliant, made static build, exports header dirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 2.8 C)
 
 set(PROJECT_NAME b64c)
-project(${PROJECT_NAME} LANGUAGES C)
 
-add_library(${PROJECT_NAME} SHARED 
+set(B64_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
+
+
+add_library(${PROJECT_NAME} STATIC
     buffer.c
     decode.c
     encode.c
